#174 - return http status code instead of login page for api calls
